# prometheus-wai-middleware

./: CHANGELOG.md  prometheus-wai-middleware.cabal  readme.md  stack.yaml
.github/workflows/: ci.yml
exec/: Main.hs
src/Network/Wai/Middleware/: Prometheus.hs
