cabal-version:       2.2
name:                prometheus-wai-middleware
version:             1.0.1.0
synopsis:            Instrument a wai application with various metrics
description:         See https://github.com/bitnomial/prometheus-wai-middleware/tree/master/readme.md
bug-reports:         https://github.com/bitnomial/prometheus-wai-middleware/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Ian Shipman
maintainer:          ian.shipman@bitnomial.com
copyright:           2020 Bitnomial, Inc.
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md

source-repository head
  type:     git
  location: https://github.com/bitnomial/prometheus-wai-middleware

-- This flag builds the example.  It is only used for testing.  It
-- is enabled in CI.
flag buildexamples
  description: Build the example executable. This is normally only used for testing.
  default:     False

library
  default-language: Haskell2010
  hs-source-dirs:   src/
  exposed-modules:
    Network.Wai.Middleware.Prometheus
  build-depends:
      base              >= 4.12  && < 5
    , case-insensitive ^>= 1.2
    , containers        >= 0.5   && < 0.8
    , clock            ^>= 0.8
    , http-types        >= 0.8   && < 0.13
    , prometheus       ^>= 2.3
    , text              >= 1.2   && < 2.2
    , wai              ^>= 3.2


executable prometheus-wai-middleware-example
  default-language: Haskell2010
  hs-source-dirs:   exec/
  main-is:          Main.hs
  build-depends:
      async                     ^>= 2.2
    , base                       >= 4.12  && < 5
    , http-types                 >= 0.8   && < 0.13
    , prometheus                ^>= 2.3
    , prometheus-wai-middleware
    , wai                       ^>= 3.2
    , warp                       >= 3.2   && < 3.5

  if flag(buildexamples)
    buildable:         True
  else
    buildable:         False
